[gd_scene load_steps=17 format=2]

[ext_resource path="res://UI/Assets/BTDestop.png" type="Texture" id=1]
[ext_resource path="res://UI/PauseMenu/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://UI/Assets/MenuBG.png" type="Texture" id=3]
[ext_resource path="res://UI/Assets/NokiaCellphone.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/Assets/PlayButton.png" type="Texture" id=5]
[ext_resource path="res://UI/Assets/PlayButtonPressed.png" type="Texture" id=6]
[ext_resource path="res://UI/Assets/BTStart.png" type="Texture" id=7]
[ext_resource path="res://UI/Assets/BTStartPressed.png" type="Texture" id=8]
[ext_resource path="res://UI/Assets/BTDestopPressed.png" type="Texture" id=9]
[ext_resource path="res://UI/Assets/OptionsButtonPressed.png" type="Texture" id=10]
[ext_resource path="res://UI/Assets/OptionsButton.png" type="Texture" id=11]
[ext_resource path="res://UI/Assets/FFFFORWA.TTF" type="DynamicFontData" id=12]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

//uniform vec4 color: hint_color;
uniform float strength = 2.5;

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, strength);
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/strength = 2.5

[sub_resource type="DynamicFont" id=4]
size = 12
outline_size = 1
outline_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.521569, 0.521569, 0.521569, 1 )
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausedText" type="RichTextLabel" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -64.0
margin_bottom = -49.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center][wave amp=32 freq=5]Paused[/wave][/center]"
text = "Paused"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 87.0
margin_top = 72.0
margin_right = 168.0
margin_bottom = 169.0
texture = ExtResource( 3 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="NinePatchRect" parent="NinePatchRect"]
modulate = Color( 0, 0, 0, 0.498039 )
show_behind_parent = true
margin_top = 3.0
margin_right = 81.0
margin_bottom = 100.0
texture = ExtResource( 3 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 107.0
margin_top = 92.0
margin_right = 148.0
margin_bottom = 147.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausedTitle" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
margin_right = 70.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
align = 1

[node name="Continue" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_right = 41.0
margin_bottom = 18.0
rect_min_size = Vector2( 41, 18 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="Options" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 41.0
margin_bottom = 38.0
rect_min_size = Vector2( 41, 20 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 10 )
expand = true
stretch_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 41.0
margin_bottom = 55.0
custom_constants/separation = 2
alignment = 1

[node name="QuitTM" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 1.0
margin_right = 19.0
margin_bottom = 17.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="QuitTD" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 21.0
margin_right = 39.0
margin_bottom = 17.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 9 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/QuitTM" to="." method="_on_quittm_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/QuitTD" to="." method="_on_quittd_pressed"]
